--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
                         color: 13942583,
                         fields: [
                             { name: "📋 Membros Recrutados", value: listaTexto },
-                            { name: "📝 Ação Necessária", value: "[Clique aqui para Editar ou Adicionar mais](http://localhost:5500/index.html)" } 
+                            { name: "📝 Ação Necessária", value: "[Clique aqui para Editar ou Adicionar mais](https://deniksamp7-hue.github.io/Planilha-egitoncrp/)" } 
                         ],
                         image: { url: LINK_IMAGEM_NOVATOS },
                         footer: { text: "Sistema de Gestão EG | 2026", icon_url: LINK_IMAGEM_NOVATOS },
@@ -280,4 +280,5 @@
         }
     </script>
 </body>
+
 </html>
