--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         body {
             margin: 0;
             font-family: 'Poppins', sans-serif;
-            /* O segredo está aqui: Verifique se o nome é Fundoeg.png ou fundoeg.png */
-            background: #0f0f0f url('Fundoeg.png') no-repeat center center fixed;
+            /* O segredo está aqui: Verifique se o nome é fundoeg.png ou fundoeg.png */
+            background: #0f0f0f url('fundoeg.png') no-repeat center center fixed;
             background-size: cover;
             color: #fff;
             min-height: 100vh;
